fix bugs that JS don't run on IOS Chrome

--- a/mycss.css
+++ b/mycss.css
@@ -1,14 +1,14 @@
 /* Disable all drag and drop */
 *, *::after, *::before {
-	-webkit-user-select: none;
-	-webkit-user-drag: none;
-	-webkit-app-region: no-drag;
+	user-select: none;
+	user-drag: none;
+	app-region: no-drag;
 	cursor: default;
 }
 
 .container_all {
     max-width: 1280px;
-    /*max-height: 1024px;*/
+    max-height: 1024px;
     width: 100%;
     height: 100%;
     background-color: aqua;
@@ -181,7 +181,7 @@ img.f_b_3 {
 }
 
 img.no_event {
-    pointer-events: none;
+    pointer-events: none !important;
 }
 
 div#hint_board,
